# TxDOT

./: .gitignore  .npmignore  README.md  README.old.md  asset-manifest.json  index.html  old.webpack.config.js  package-lock.json  package.json  vite.config.js  webpack.config.js
.github/workflows/: gh-pages.yml  jekyll-gh-pages.yml  publish.yml  release.yml
design/: 01062021 TxCRCP-ME Analysis Result Sheet.htm  01062021 TxCRCP-ME Analysis Result Sheet.xlsx  01082021 TxCRCP-ME Interface.pptx  11222021 TxCRCP-ME Interface Modification Request.pptx  12102021 TxCRCP-ME Interface.pptx  MASTER_report_template_NEW2.dotx  Modification Requests (Oct 29).docx  logo.ai  ~$11222021 TxCRCP-ME Interface Modification Request.pptx  ~$STER_report_template_NEW2.dotx
design/01062021 TxCRCP-ME Analysis Result Sheet_files/: filelist.xml  sheet001.htm  stylesheet.css  tabstrip.htm
public/: electron.js  index.html  splashscreen.html
src/: App.css  App.js  App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json  v1.Cargo.toml  v1.tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  v1.main.rs
src/component/: CRCP.js  CRCP.jsx  CRCPv1.js  CRCPv2_1132021.js  County.js  County.jsx  County_vr.js  District.js  District.jsx  EditableTable.js  EditableTable.jsx  Graph.css  Graph.js  Graph.jsx  TransferFunc.js  TransferFuncVar.js  TxCRCP-ME Analysis Result Sheet.html  report.js  report.jsx  tableData.js  tableData.jsx  test.js  ulti.js  ulti.jsx
src/image/: Footer_EXBD_prnt.tif
static/css/: main.114cb504.chunk.css  main.114cb504.chunk.css.map  (+36 more)
(+342 files in other folders)
