[package]
name = "TxCRCPME"
version = "2.4.0"
description = "React Tauri Cross Platform App"
license = ""
repository = ""
default-run = "TxCRCPME"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }

[dependencies.tauri]
version = "1.0.0-beta"
features = ["api-all"]

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
